finish get single resource controller, start working on POST
